--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
     "tasks": {
-        "start": "deno run --allow-write=. --allow-read=. --allow-env ./src/mod.ts"
+        "start": "deno run --allow-write=. --allow-read=. --allow-run ./src/mod.ts"
     }
 }
